Fix z-index for immobile bar

--- a/public/style.scss
+++ b/public/style.scss
@@ -125,7 +125,6 @@
 
   &.immobile {
     opacity: 0.5;
-    z-index: 1;
     .gantt-bar-label {
         cursor: default;
     }
